<resources>
    <string name="app_name">Moov</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="notification_icon_description">Notification image</string>
    <string name="profile_image_description">Profile Image</string>
    <string name="location_name">Accra, Ghana</string>
    <string name="location">Your location</string>
    <string name="suffix_icon_description" />
    <string name="search_icon_description" />
    <string name="search_hint">Enter the receipt number...</string>
    <string name="arrow_down" />
    <string name="shipment">Shipment Number</string>
    <string name="shipment_number">NEJ123405959495546585</string>
    <string name="package_icon" />
    <string name="track">Tracking</string>
    <string name="sender">Sender</string>
    <string name="sender_location">Mokola, Ghana</string>
    <string name="time_title">Time\n</string>
    <string name="time_value">2 - 3 days</string>
    <string name="delivery_time">Time</string>
    <string name="time">2 - 3 days</string>
    <string name="sender_icon_img" />
    <string name="status">Status</string>
    <string name="status_value">Waiting</string>
    <string name="receiver">Receiver</string>
    <string name="receiver_location">Legon, Accra</string>
    <string name="receiver_icon_img" />
    <string name="add_stop_text">Add Stop</string>
    <string name="add_icon" />
    <string name="available_vehicles">Available Vehicles</string>
    <string name="vehicle_title">Ocean Freight</string>
    <string name="vehicle_type">International</string>
    <string name="vehicle_image" />
    <string name="vehicle_type1">Reliable</string>
    <string name="vehicle_title1">Cargo Fleight</string>
    <string name="vehicle_title2">Air Fleight</string>
    <string name="home">Home</string>
    <string name="calculate">Calculate</string>
    <string name="shipment_icon_text">Shipment</string>
    <string name="profile_icon_text">Profile</string>
    <string name="macbook_pro_m2">Macbook Pro M2</string>
    <string name="item_number">#NE458876</string>
    <string name="paris">Paris</string>
    <string name="mokola">Mokola</string>
    <string name="legon">Legon</string>
    <string name="shipment_history">Shipment history</string>
    <string name="shipment_text">Shipment</string>
    <string name="arriving_today">Arriving today</string>
    <string name="delivery_notice">Your delivery #NE56676767 from Mokola is arriving today</string>
    <string name="charge">$1000</string>
    <string name="sept_20_2024">Sept 20 2024</string>
    <string name="in_progress">In-progress</string>
    <string name="pending">pending</string>
    <string name="loading">loading</string>
    <string name="calculate_text">Calculate</string>
    <string name="destination">Destination</string>
    <string name="sender_location_text">Sender Location</string>
    <string name="receiver_location_text">Receiver Location</string>
    <string name="weight_location_text">Approx. weight</string>
    <string name="packaging">Packaging</string>
    <string name="what_are_you_sending">What are you sending</string>
    <string name="documents">Documents</string>
    <string name="glass">Glass</string>
    <string name="liquid">Liquid</string>
    <string name="calculate_btn_text">Calculate</string>
    <string name="total_estimated_amount">Total Estimated Amount</string>
    <string name="_1456_usd">$1456 USD</string>
    <string name="amount_notice">This amount is estimated this will vary if you change your location or weight</string>
    <string name="back_to_home">Back to home</string>


    <string-array name="dropdown_items">
        <item>Box</item>
        <item>Parcel</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loc">TODO</string>
    <string name="label">Label</string>
    <string name="_2">2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="persistent_bottomsheet">Persistent BottomSheet</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="estimated_time">Estimated Time</string>
    <string name="_09_05">09:05</string>
    <string name="pm">PM</string>
    <string name="_7min">7min</string>
    <string name="arriving_today_">Arriving today!</string>
    <string name="track_delivery_desc">Your delivery #NE45455767 from Mokola, is arriving today!</string>
    <string name="feb_20">Feb 20</string>

</resources>
