<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_calculate"
        android:icon="@drawable/ic_calculate"
        android:enabled="true"
        android:title="@string/calculate" />
    <item
        android:id="@+id/navigation_shipment"
        android:icon="@drawable/ic_shipment"
        android:enabled="true"
        android:title="@string/shipment_icon_text" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:enabled="true"
        android:title="@string/profile_icon_text" />
</menu>
